--- a/style.css
+++ b/style.css
@@ -24,6 +24,6 @@ button[type=submit] {
   display: block;
   margin: auto;
   margin-top: 20px;
-  background-color: yellow;
+  background-color: pink;
   
 }
